Fix scrollbar

--- a/src/layouts/index.module.css
+++ b/src/layouts/index.module.css
@@ -8,12 +8,7 @@
   padding: 32px 40px;
   background: var(--bg-light-100);
   max-height: 100vh;
-}
-
-@media (max-width: 1400px) {
-  .content {
-    overflow-y: auto;
-  }
+  overflow-y: auto;
 }
 
 @media (max-width: 760px) {
